@@ -76,6 +76,8 @@ they don't connect in 10 minutes, the granted slot is removed.</dd>
 directories and adding new folders and files. DC++ automatically
 refreshes once an hour by default, and also refreshes after the list of
 shared directories is changed.</dd>
+  <dt><untranslated>/me</untranslated></dt>
+  <dd>Speak as a third person.</dd>
   <dt><untranslated>/slots &lt;number&gt;</untranslated></dt>
   <dd>Sets the current number of upload slots to the number you
 specify. If this is less than the current number of slots, no
@@ -129,6 +131,14 @@ available only in the hub frame.</dd>
   <dt><untranslated>/f &lt;search string&gt;</untranslated></dt>
   <dd>Highlights the last occourrence of the specified search string in 
 the chat window.</dd>
+  <dt><untranslated>/download [number]</untranslated></dt>
+  <dd>Set the download speed limit in KiBs. Zero or omitted value disables the limit.</dd>
+  <dt><untranslated>/upload [number]</untranslated></dt>
+  <dd>Set the upload speed limit in KiBs. Zero or omitted value disables the limit.</dd>
+  <dt><untranslated>/about:config</untranslated></dt>
+  <dt><untranslated>/a:c</untranslated></dt>
+  <dt><untranslated>/ac</untranslated></dt>
+  <dd>Opens the <a href="window_about_config.html">internal settings list</a> debugging and testing tool window. Note that this tool provides bulk access to the low level application settings; incorrect use can be harmful to the stability, security, and performance of the application.</dd>
 </dl>
 </body>
 </html>
