@@ -111,6 +111,10 @@
 			<dd><div>Open the <placeholder><a href="window_network_stats.html">Network Statistics</a></placeholder> window.</div>
 			<div>It displays a real-time chart of the average speed of data sent and received by DC++.</div></dd>
 
+			<dt><img src="DCPlusPlus.ico" width="16" height="16" alt="About:config"/>About:config</dt>
+			<dd><div>Open the <placeholder><a href="window_about_config.html">About:config</a></placeholder> window.</div>
+			<div>It is an internal settings list debugging and testing helper tool window. This menu item exists only in development builds of DC++. See the /about:config command in the <placeholder><a href="chat_commands.html">Chat Commands</a></placeholder> list for more information.</div></dd>
+
 			<dt><img src="Indexing.ico" width="16" height="16" alt="Indexing progress"/> Indexing progress</dt>
 			<dd><div>Open the <placeholder><a href="dialog_indexing_progress.html">Indexing progess</a></placeholder> dialog.</div>
 			<div>It shows you the current state of file hashing operation and how much time there is left from it.</div></dd>
