@@ -57,6 +57,7 @@
 #include "SearchFrame.h"
 #include "MainWindow.h"
 #include "PrivateFrame.h"
+#include "ACFrame.h"
 
 #ifdef HAVE_HTMLHELP_H
 #include <htmlhelp.h>
@@ -543,9 +544,10 @@ const TCHAR
 
 const char* command_strings[] = {
 	"/refresh",
+	"/me",
+	"/slots #", 
+	"/dslots #",
 	"/search <string>",
-	"/close",
-	"Closes the current window.",
 	"/clear [lines to keep]",
 	"/dc++",
 	"/away [message]",
@@ -557,11 +559,16 @@ const char* command_strings[] = {
 	"/log <status, system, downloads, uploads>",
 	"/help",
 	"/u <url>",
-	"/f <search string>"
+	"/f <search string>",
+	"/download #",
+	"/upload #",
+	"/close",
+	"/about:config, /a:c, /ac"
 };
 
 const char* command_helps[] = {
 	N_("Manually refreshes DC++'s share list by going through the shared directories and adding new folders and files. DC++ automatically refreshes once an hour by default, and also refreshes after the list of shared directories is changed."),
+	N_("Speak as a third person."),
 	N_("Sets the current number of upload slots to the number you specify. If this is less than the current number of slots, no uploads are cancelled."),
 	N_("Sets the current number of download slots to the number you specify. If this is less than the current number of slots, no downloads are cancelled."),
 	N_("Opens a new search window with the specified search string. It does not automatically send the search."),
@@ -574,9 +581,13 @@ const char* command_helps[] = {
 	N_("Launches your default web browser to the Internet Movie Database (imdb) with the specified query."),
 	N_("Rebuilds the HashIndex.xml and HashData.dat files, removing entries to files that are no longer shared, or old hashes for files that have since changed. This runs in the main DC++ thread, so the interface will freeze until the rebuild is finished."),
 	N_("If no parameter is specified, it launches the log for the hub or private chat with the associated application in Windows. If one of the parameters is specified it opens that log file. The status log is available only in the hub frame."),
-	N_("Displays available commands. (The ones listed on this page.) Optionally, you can specify &quot;brief&quot; to have a brief listing."),
+	N_("Displays available commands. (The ones listed on this page.) Optionally, you can specify \"brief\" to have a brief listing."),
 	N_("Launches your default web browser with the given URL."),
-	N_("Highlights the last occourrence of the specified search string in the chat window.")
+	N_("Highlights the last occourrence of the specified search string in the chat window."),
+	N_("Set the download speed limit in KiBs. Zero or omitted value disables the limit."),
+	N_("Set the upload speed limit in KiBs. Zero or omitted value disables the limit."),
+	N_("Closes the current window."),
+	N_("Opens the internal settings list debugging tool window.")
 };
 
 tstring WinUtil::getDescriptiveCommands() {
@@ -594,7 +605,7 @@ tstring WinUtil::getDescriptiveCommands() {
 
 tstring
 	WinUtil::commands =
-		_T("/refresh, /me <msg>, /clear [lines to keep], /slots #, /dslots #, /search <string>, /f <string>, /dc++, /away <msg>, /back, /d <searchstring>, /g <searchstring>, /imdb <imdbquery>, /u <url>, /rebuild, /download, /upload");
+		_T("/refresh, /me <msg>, /slots #, /dslots #, /search <string>, /clear [lines to keep], /dc++, /away <msg>, /back, /d <searchstring>, /g <searchstring>, /imdb <imdbquery>, /rebuild, /log [type], /help [brief], /u <url>, /f <string>, /download [#], /upload [#], /close, /a[bout][:]c[onfig]");
 
 bool WinUtil::checkCommand(tstring& cmd, tstring& param, tstring& message, tstring& status, bool& thirdPerson) {
 	string::size_type i = cmd.find(' ');
@@ -697,6 +708,8 @@ bool WinUtil::checkCommand(tstring& cmd, tstring& param, tstring& message, tstri
 		auto value = Util::toInt(Text::fromT(param));
 		ThrottleManager::setSetting(ThrottleManager::getCurSetting(SettingsManager::MAX_DOWNLOAD_SPEED_MAIN), value);
 		status = value ? str(TF_("Download limit set to %1% KiB/s") % value) : T_("Download limit disabled");
+	} else if(Util::stricmp(cmd.c_str(), _T("about:config")) == 0 || Util::stricmp(cmd.c_str(), _T("ac")) == 0 || Util::stricmp(cmd.c_str(), _T("a:c")) == 0) {
+		ACFrame::openWindow(mainWindow->getTabView());
 	} else {
 		return false;
 	}
