@@ -1,4 +1,6 @@
 -- 0.8xx ---
+* [L#1965620] Restore TLS connections to certain servers with multiple hostnames (fix adapted from AirDC++) (emtee)
+* Add AboutConfig frame for testing and debugging purposes (iceman50, emtee)
 * [L#1682791] Block possible unencrypted direct private message connection attempts (fix adapted from AirDC++) (emtee)
 * Upgrade compiler for better performance; allows further optimizations to modern Windows versions (cologic, emtee)
 * Offer the current testing release to a random subset of users at start (emtee)
